# Performance

performance_etl/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy_performance_stack.bat  docker-compose.yml  pyproject.toml  requirements.txt
performance_etl/.github/workflows/: ci-cd.yml
performance_etl/airflow/dags/: catapult_pipeline.py  freshness_monitor.py  vald_pipeline.py
performance_etl/config/providers/: catapult.yml  vald.yml
performance_etl/ingestion/: bootstrap.py
performance_etl/ingestion/catapult/: bootstrap.py  catalog.py  client.py  cutoff.py  pipeline.py  position_sync.py  raw_replay.py  replay_scope.py  review.py
performance_etl/ingestion/catapult/loaders/: bronze_loader.py  raw_loader.py
performance_etl/ingestion/common/: __init__.py  atomic_publish.py  batch.py  config.py  db.py  freshness_monitor.py  http_client.py  logging.py  perf.py  quality.py  run_context.py  sql_runner.py  timing.py  utils.py  watermark.py
performance_etl/ingestion/common/spark/: __init__.py  jdbc.py  session.py
performance_etl/ingestion/vald/: catalog.py  client.py  cutoff.py  day_window.py  gold_etl.py  metric_utils.py  pipeline.py  quality_rules.py  raw_replay.py  silver_etl.py
performance_etl/ingestion/vald/endpoints/: dynamo.py  forcedecks.py  forceframe.py  humantrak.py  nordbord.py  profiles.py  smartspeed.py  tenants.py
performance_etl/script/: __init__.py  bootstrap_database.py  check_repo_hygiene.py  clean_catapult_tables.py  clean_database.py  clean_vald_tables.py  run_catapult_extract_raw.py  run_catapult_ingestion.py  run_catapult_position_sync.py  run_catapult_raw_to_bronze.py  run_vald_bronze_to_silver.py  run_vald_extract_raw.py  run_vald_ingestion.py  run_vald_raw_to_bronze.py  run_vald_reset_rebuild.py  run_vald_resume_pipeline.py  run_vald_silver_to_gold.py  start_airflow_stack.py  validate_vald_pipeline.py
performance_etl/sql/admin/: reset_dev.sql  verify_schema.sql
performance_etl/sql/ddl/: 00_schemas.sql  01_extensions.sql
performance_etl/tests/integration/: test_vald_pipeline_smoke.py
performance_etl/tests/unit/: test_atomic_publish.py  test_bootstrap_database.py  test_clean_catapult_tables.py  test_clean_database.py  test_clean_vald_tables.py  test_config.py  test_db.py  test_freshness_monitor.py  test_perf.py  test_run_context.py  test_spark.py  test_start_airflow_stack.py  test_timing.py
(+78 files in other folders)
